; ModuleID = '/home/carl/AnghaBench/linux/arch/x86/math-emu/extr_fpu_etc.c_fxam.c'
source_filename = "/home/carl/AnghaBench/linux/arch/x86/math-emu/extr_fpu_etc.c_fxam.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

@SW_C3 = common dso_local global i32 0, align 4
@SW_C0 = common dso_local global i32 0, align 4
@SW_C2 = common dso_local global i32 0, align 4
@EXP_OVER = common dso_local global i32 0, align 4
@SIGN_NEG = common dso_local global i64 0, align 8
@SW_C1 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_6__*, i32)* @fxam to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @fxam(%struct.TYPE_6__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  %6 = load i32, i32* %4, align 4
  switch i32 %6, label %41 [
    i32 134, label %7
    i32 131, label %11
    i32 132, label %13
    i32 133, label %15
  ]

7:                                                ; preds = %2
  %8 = load i32, i32* @SW_C3, align 4
  %9 = load i32, i32* @SW_C0, align 4
  %10 = or i32 %8, %9
  store i32 %10, i32* %5, align 4
  br label %41

11:                                               ; preds = %2
  %12 = load i32, i32* @SW_C3, align 4
  store i32 %12, i32* %5, align 4
  br label %41

13:                                               ; preds = %2
  %14 = load i32, i32* @SW_C2, align 4
  store i32 %14, i32* %5, align 4
  br label %41

15:                                               ; preds = %2
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %17 = call i32 @FPU_Special(%struct.TYPE_6__* %16)
  switch i32 %17, label %40 [
    i32 130, label %18
    i32 128, label %22
    i32 129, label %36
  ]

18:                                               ; preds = %15
  %19 = load i32, i32* @SW_C2, align 4
  %20 = load i32, i32* @SW_C3, align 4
  %21 = or i32 %19, %20
  store i32 %21, i32* %5, align 4
  br label %40

22:                                               ; preds = %15
  %23 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %24 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = and i32 %25, -2147483648
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %28, label %35

28:                                               ; preds = %22
  %29 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %30 = call i32 @exponent(%struct.TYPE_6__* %29)
  %31 = load i32, i32* @EXP_OVER, align 4
  %32 = icmp eq i32 %30, %31
  br i1 %32, label %33, label %35

33:                                               ; preds = %28
  %34 = load i32, i32* @SW_C0, align 4
  store i32 %34, i32* %5, align 4
  br label %35

35:                                               ; preds = %33, %28, %22
  br label %40

36:                                               ; preds = %15
  %37 = load i32, i32* @SW_C2, align 4
  %38 = load i32, i32* @SW_C0, align 4
  %39 = or i32 %37, %38
  store i32 %39, i32* %5, align 4
  br label %40

40:                                               ; preds = %15, %36, %35, %18
  br label %41

41:                                               ; preds = %40, %2, %13, %11, %7
  %42 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %43 = call i64 @getsign(%struct.TYPE_6__* %42)
  %44 = load i64, i64* @SIGN_NEG, align 8
  %45 = icmp eq i64 %43, %44
  br i1 %45, label %46, label %50

46:                                               ; preds = %41
  %47 = load i32, i32* @SW_C1, align 4
  %48 = load i32, i32* %5, align 4
  %49 = or i32 %48, %47
  store i32 %49, i32* %5, align 4
  br label %50

50:                                               ; preds = %46, %41
  %51 = load i32, i32* %5, align 4
  %52 = call i32 @setcc(i32 %51)
  ret void
}

declare dso_local i32 @FPU_Special(%struct.TYPE_6__*) #1

declare dso_local i32 @exponent(%struct.TYPE_6__*) #1

declare dso_local i64 @getsign(%struct.TYPE_6__*) #1

declare dso_local i32 @setcc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
